# OpenAssetIO

./: .clang-tidy  CMakeLists.txt  README.md  RELEASE_NOTES.md
.github/workflows/: build-instructions.yml  build-vfx-reference-platform.yml  code-quality.yml  integrations.yml
cmake/: DefaultTargetProperties.cmake  StaticAnalyzers.cmake  Testing.cmake  ThirdParty.cmake
doc/: BUILDING.md
doc/contributing/: CODING_STANDARDS.md
doc/decisions/: DR016-Appendix-Implementation-sketches.md  DR016-One-to-many-result-paging.md
doc/doxygen/: Doxyfile
examples/host/simpleResolver/: simpleResolver.py
examples/manager/SimpleCppManager/: README.md
examples/manager/SimpleCppManager/src/: SimpleCppManager.cpp
examples/manager/SimpleCppManager/tests/: CMakeLists.txt  test_SimpleCppManager.py
python/openassetio/: traits.py
python/openassetio/_openassetio/: traits.pyi
python/openassetio/pluginSystem/: PluginSystemManagerFactory.py
python/openassetio/specification/: __init__.py
python/openassetio/specification/trait/: __init__.py
resources/perftest/: CMakeLists.txt  perftest.cpp
src/: CMakeLists.txt
src/openassetio-core/: CMakeLists.txt  specifications.cpp
src/openassetio-core/include/openassetio/: BatchElementError.hpp  constants.hpp  specifications.hpp  typedefs.hpp
src/openassetio-core/specification/: BlobSpecification.cpp  Specification.cpp  SpecificationData.cpp
src/openassetio-core/specification/trait/: BlobTrait.cpp
src/openassetio-core/src/errors/: exceptionMessages.cpp
src/openassetio-core/src/hostApi/: Manager.cpp  ManagerFactory.cpp
src/openassetio-core/src/managerApi/: ManagerInterface.cpp
src/openassetio-core/src/pluginSystem/: CppPluginSystem.cpp  CppPluginSystemManagerImplementationFactory.cpp  HybridPluginSystemManagerImplementationFactory.cpp  platform.hpp
src/openassetio-core/src/utils/: Regex.cpp  Regex.hpp  formatter.cpp  ostream.cpp  path.cpp  substitute.cpp
src/openassetio-core/tests/: CMakeLists.txt
src/openassetio-core/tests/utils/: RegexTest.cpp
src/openassetio-core/trait/: BlobTrait.cpp  keys.hpp
src/openassetio-python/: CMakeLists.txt  _openassetio.cpp  _openassetio.hpp  setup.py
src/openassetio-python/bridge/: CMakeLists.txt
src/openassetio-python/cmodule/: CMakeLists.txt
src/openassetio-python/cmodule/src/: EntityReferenceBinding.cpp  _openassetio.cpp  _openassetio.hpp  constantsBinding.cpp  utilsBinding.cpp
src/openassetio-python/managerAPI/: ManagerInterface.cpp
src/openassetio-python/package/openassetio/: exceptions.py  utils.py
src/openassetio-python/specification/: BlobSpecification.cpp  HasSpecificationData.hpp  Specification.cpp  SpecificationBase.cpp  SpecificationData.cpp
src/openassetio-python/specification/trait/: BlobTrait.cpp
src/openassetio-python/tests/bridge/: CMakeLists.txt
src/openassetio-python/tests/cmodule/: test_DefaultArg.py  (+2 more)
src/openassetio-python/trait/: BlobTrait.cpp
src/openassetio-ui/: CMakeLists.txt
src/openassetio-ui/tests/: .clang-tidy  CMakeLists.txt  main.cpp
src/openassetio-ui/tests/pluginSystem/resources/plugins/working/: CMakeLists.txt  StubUIDelegateInterface.hpp  pythonGilCheckUIPlugin.cpp  uiPlugin.cpp
tests/openassetio/: test_traits.py
(+88 files in other folders)
